--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@prisma/client": "^4.9.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "aws-sdk": "^2.1296.0",
@@ -18,13 +19,13 @@
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "next-auth": "^4.18.8",
+    "prisma": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/busboy": "^1.5.0",
     "@types/node": "^18.11.18"
   }
 }
