updated front contents

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ NEXT_PUBLIC_AWS_S3_BUCKET=uploading-images-nextjs
 
 NEXTAUTH_SECRET=4e3297264c8bb22bb459da74706e753b
 NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_DB_CONNECTION=mysql://root:p@88w0rd@localhost:3306/nextjs13_schema
 
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=6576293325-ksh69mlndna72tpjvkeo1hh4b2sqrs2q.apps.googleusercontent.com
 NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=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
