--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "jodit-react": "^1.3.32",
     "next": "13.1.2",
     "next-auth": "^4.18.8",
     "prisma": "^4.9.0",
