--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.9.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "antd": "^5.1.6",
     "aws-sdk": "^2.1296.0",
     "axios": "^1.2.3",
     "eslint": "8.32.0",
@@ -27,6 +28,9 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
